Fix align on hbr cards

--- a/css/hebergements.css
+++ b/css/hebergements.css
@@ -69,7 +69,7 @@
 
 @media (max-width: 1024px) {
   .hebergements-cards {
-    justify-content: space-evenly;
+    justify-content: space-between;
     max-width: 100%;
   }
 
